# network-gamepad-interface

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  demo.py  pyproject.toml  requirements.txt  setup.py  start_client.sh  start_server.sh
ngi/client/: gamepad_input.py  main.py  network_client.py
ngi/common/: protocol.py
ngi/server/: main.py  network_server.py  virtual_gamepad.py
tests/: test_protocol.py  test_uinput_minimal.py
